--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "latihan",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
