--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "bootstrap": "^4.1.3",
     "framer-motion": "^11.11.11",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1", 
+    "react-dom": "^18.3.1", 
     "react-icons": "5.3.0",
     "daisyui": "^4.12.13",
     "tailwindcss": "^3.4.1",
